Fix overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,4 +3,5 @@
 
 * {
     font-family: 'Varela Round', ;  
+    overflow-x: hidden;
 }
